--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-tuya-alejandro",
-  "version": "1.0",
+  "version": "2.1.0-beta.7",
   "description": "🏠 Offical Homebridge plugin for TuyAPI ",
   "main": "index.js",
   "scripts": {
@@ -18,9 +18,9 @@
   "author": "Rayan Khan",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/iRayanKhan/homebridge-tuya/issues"
+    "url": "https://github.com/L1qu1d1c3/homebridge-tuya/issues"
   },
-  "homepage": "https://github.com/iRayanKhan/homebridge-tuya#readme",
+  "homepage": "https://github.com/L1qu1d1c3/homebridge-tuya#readme",
   "dependencies": {
     "async": "^3.1.0",
     "commander": "^3.0.1",
@@ -33,7 +33,7 @@
   "keywords": [
     "homebridge-plugin",
     "homebridge",
-    "homebridge-tuya",
+    "homebridge-tuya-alejandro",
     "tuya"
   ],
   "engines": {
