--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "tuya-lan": "./bin/cli.js",
-    "tuya-lan-find": "./bin/cli-find.js",
-    "tuya-lan-decode": "./bin/cli-decode.js"
+    "tuya-lan-alejandro": "./bin/cli.js",
+    "tuya-lan-find-alejandro": "./bin/cli-find.js",
+    "tuya-lan-decode-alejandro": "./bin/cli-decode.js"
   },
   "repository": {
     "type": "git",
